test/files/neg/predef-masking-by-nonleading-import.check
predef-masking-by-nonleading-import.scala:6: error: value + is not a member of type parameter T
  def f[T](x: T) = x + 5
                     ^
one error found
